--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,51 @@
             <h2>Примеры работ</h2>
             <div>
                 <ul>
+                    <li>
+                      <img src="./images/tehnokryak.jpg" alt="website tehnokryak">
+                      <h3>Технокряк</h3>
+                      <p>Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/posterNewOrlean.jpg" alt="design New Orlean vs Golden Star">
+                        <h3>Постер New Orlean vs Golden Star</h3>
+                        <p>Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/restoranSeafood.jpg" alt="app restoran Seafood>
+                        <h3>Ресторан Seafood</h3>
+                        <p>Додаток</p>
+                    </li>
+                    <li>
+                        <img src="./images/projectPrime.jpg" alt=" marketing project Prime">
+                        <h3>Проєкт Prime</h3>
+                        <p>Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/projectBoxes.jpg" alt="project-app Boxes">
+                        <h3>Проєкт Boxes</h3>
+                        <p>Додаток</p>
+                    </li>
+                    <li>
+                        <img src="./images/inspiration.jpg" alt="website Inspiration has no Borders">
+                        <h3>Inspiration has no Borders</h3>
+                        <p>Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/limitedEdition.jpg" alt="design Limited Edition">
+                        <h3>Видання Limited Edition</h3>
+                        <p>Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/projectLAB.jpg" alt="marketing project LAB">
+                        <h3>Проєкт LAB</h3>
+                        <p>Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/growingBusiness.jpg" alt="app Growing Business">
+                        <h3>Growing Business</h3>
+                        <p>Додаток</p>
+                    </li>
                     
                 </ul>
             </div>
