change language+add fonts

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
 <body>
@@ -14,9 +17,9 @@
             <a href="#">WebStudio</a>
 
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -28,7 +31,7 @@
     </header>
     <main>
         <section>
-            <h1>Портфолио</h1>
+            <h1>Портфоліо</h1>
             <ul>
                 <li><a href="#">Усі</a></li>
                 <li><a href="#">Веб-сайти</a></li>
@@ -96,8 +99,8 @@
         <a href="#">WebStudio</a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">г. Киев,
-                        пр-т Леси Украинки,
+                <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ,
+                        пр-т Лесі Українки,
                         26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
