--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </div>
    </section>
    <section>
-    <!-- Чем мы занимаемся -->
-    <h2>Чем мы занимаемся</h2>
+    <!-- Чим ми займаємося -->
+    <h2>Чим ми займаємося</h2>
     <ul>
         <li>
             <img src="./images/coding.jpg" alt="writing code in deskctop" width="370" height="294">
@@ -79,22 +79,22 @@
         <ul>
             <li>
                 <img src="./images/igordemyanenko.jpg" alt="photo of igordemyanenko" width="270" height="260">
-                <h3>Игорь Демьяненко</h3>
+                <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/olgarepina.jpg" alt="photo of olgarepina" width="270" height="260">
-                <h3>Ольга Репина</h3>
+                <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/nikolaytarasov.jpg" alt="photo of nikolaytarasov" width="270" height="260">
-                <h3>Николай Тарасов</h3>
+                <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/mihailermakov.jpg" alt="photo of mihailermakov" width="270" height="260">
-                <h3>Михаил Ермаков</h3>
+                <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
