--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="#">WebStudio</a>
         
             <ul>
-                <li><a href="#">Студія</a></li>
-                <li><a href="#">Портфоліо</a></li>
+                <li><a href="index.html">Студія</a></li>
+                <li><a href="portfolio.html">Портфоліо</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
@@ -107,8 +107,7 @@
 <a href="#">WebStudio</a>
 <address>
     <ul>
-        <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки,
-            26</a></li>
+        <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
         <li><a href="mailto:info@example.com">info@example.com</a></li>
         <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
