--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
             <a href="#">WebStudio</a>
 
             <ul>
-                <li><a href="#">Студія</a></li>
-                <li><a href="#">Портфоліо</a></li>
+                <li><a href="index.html">Студія</a></li>
+                <li><a href="portfolio.html">Портфоліо</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
@@ -33,11 +33,11 @@
         <section>
             <h1>Портфоліо</h1>
             <ul>
-                <li><a href="#">Усі</a></li>
-                <li><a href="#">Веб-сайти</a></li>
-                <li><a href="#">Додатки</a></li>
-                <li><a href="#">Дизайн</a></li>
-                <li><a href="#">Маркетинг</a></li>
+                <li><button class="btn" type="button">Усі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li> <button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
 
             <!--Oсобенности -->
@@ -45,47 +45,47 @@
             <div>
                 <ul>
                     <li>
-                      <img src="./images/tehnokryak.jpg" alt="website tehnokryak">
+                      <img src="./images/tehnokryak.jpg" alt="website tehnokryak" width="370px">
                       <h3>Технокряк</h3>
                       <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/posterNewOrlean.jpg" alt="design New Orlean vs Golden Star">
+                        <img src="./images/posterNewOrlean.jpg" alt="design New Orlean vs Golden Star" width="370px">
                         <h3>Постер New Orlean vs Golden Star</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/restoranSeafood.jpg" alt="app restoran Seafood>
+                        <img src="./images/restoranSeafood.jpg" alt="app restoran Seafood" width="370px">
                         <h3>Ресторан Seafood</h3>
                         <p>Додаток</p>
                     </li>
                     <li>
-                        <img src="./images/projectPrime.jpg" alt=" marketing project Prime">
+                        <img src="./images/projectPrime.jpg" alt=" marketing project Prime" width="370px">
                         <h3>Проєкт Prime</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/projectBoxes.jpg" alt="project-app Boxes">
+                        <img src="./images/projectBoxes.jpg" alt="project-app Boxes" width="370px">
                         <h3>Проєкт Boxes</h3>
                         <p>Додаток</p>
                     </li>
                     <li>
-                        <img src="./images/inspiration.jpg" alt="website Inspiration has no Borders">
+                        <img src="./images/inspiration.jpg" alt="website Inspiration has no Borders" width="370px">
                         <h3>Inspiration has no Borders</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/limitedEdition.jpg" alt="design Limited Edition">
+                        <img src="./images/limitedEdition.jpg" alt="design Limited Edition" width="370px">
                         <h3>Видання Limited Edition</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/projectLAB.jpg" alt="marketing project LAB">
+                        <img src="./images/projectLAB.jpg" alt="marketing project LAB" width="370px">
                         <h3>Проєкт LAB</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/growingBusiness.jpg" alt="app Growing Business">
+                        <img src="./images/growingBusiness.jpg" alt="app Growing Business" width="370px">
                         <h3>Growing Business</h3>
                         <p>Додаток</p>
                     </li>
