add styles to index.html

--- a/index.html
+++ b/index.html
@@ -11,55 +11,54 @@
 </head>
 <body>
     <header>
-        <nav>
-        <a href="#">WebStudio</a>
+        <nav >
+        <a class="logo" href="#">Web<span class="studio">Studio</span></a>
         
-            <ul>
-                <li><a href="index.html">Студія</a></li>
-                <li><a href="portfolio.html">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
+            <ul class="site-nav">
+                <li class="link current"><a href="index.html">Студія</a></li>
+                <li class="link"><a href="portfolio.html">Портфоліо</a></li>
+                <li class="link"><a href="#">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts">
+            <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
 
     </header>
 <main>
-   <section>
+   <section class="hero">
     <!-- Герой -->
-    <h1>Ефективні рішення для вашого бізнесу</h1>
-    <button type="button">Замовити послугу</button>
+    <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
+    <button class="btn" type="button">Замовити послугу</button>
    </section>
-   <section>
+   <section class="section">
     <!--Oсобенности -->
-    <h2>Oсобливості</h2>
+    <h2 class="section-title">Oсобливості</h2>
         <div>
-            <ul>
+            <ul class="features">
                 <li>
-                    <h3>Увага до діталей</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="title">Увага до діталей</h3>
+                    <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальність</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="title">Пунктуальність</h3>
+                    <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>Планування</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="title">Планування</h3>
+                    <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>Сучасні технології</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="title">Сучасні технології</h3>
+                    <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </div>
    </section>
-   <section>
+   <section class="section" >
     <!-- Чим ми займаємося -->
-    <h2>Чим ми займаємося</h2>
+    <h2 class="section-title">Чим ми займаємося</h2>
     <ul>
         <li>
             <img src="./images/coding.jpg" alt="writing code in deskctop" width="370" height="294">
@@ -72,11 +71,11 @@
         </li>
     </ul>
    </section>
-   <section>
+   <section class="section">
     <!--Наша команда  -->
-    <h2>Наша команда</h2>
+    <h2 class="section-title">Наша команда</h2>
     <div>
-        <ul>
+        <ul class="team">
             <li>
                 <img src="./images/igordemyanenko.jpg" alt="photo of igordemyanenko" width="270" height="260">
                 <h3>Ігор Дем'яненко</h3>
@@ -102,14 +101,14 @@
    </section>
 
 </main>
-<footer>
+<footer class="footer">
     <!-- Подвал -->
-<a href="#">WebStudio</a>
+<a class="logo" href="#">Web<span class="studio-footer">Studio</span></a>
 <address>
     <ul>
-        <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <li class="city"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
+        <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+        <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
 </address>
 </footer>
