--- a/portfolio.html
+++ b/portfolio.html
@@ -14,80 +14,80 @@
 <body>
     <header>
         <nav>
-            <a href="#">WebStudio</a>
-
-            <ul>
-                <li><a href="index.html">Студія</a></li>
-                <li><a href="portfolio.html">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
+            <a class="logo" href="#">Web<span class="studio">Studio</span></a>
+        
+            <ul class="site-nav">
+                <li class="link current"><a href="index.html">Студія</a></li>
+                <li class="link"><a href="portfolio.html">Портфоліо</a></li>
+                <li class="link"><a href="#">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts">
+            <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+
 
     </header>
     <main>
         <section>
-            <h1>Портфоліо</h1>
-            <ul>
+            <h1 class="portfolio-section-title">Портфоліо</h1>
+            <ul class="examples-button">
                 <li><button class="btn" type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li> <button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="btn" type="button">Веб-сайти</button></li>
+                <li><button class="btn" type="button">Додатки</button></li>
+                <li><button class="btn" type="button">Дизайн</button></li>
+                <li><button class="btn" type="button">Маркетинг</button></li>
             </ul>
 
             <!--Oсобенности -->
-            <h2>Примеры работ</h2>
+            <h2>Приклади робіт</h2>
             <div>
-                <ul>
+                <ul class="examples">
                     <li>
                       <img src="./images/tehnokryak.jpg" alt="website tehnokryak" width="370px">
-                      <h3>Технокряк</h3>
-                      <p>Веб-сайт</p>
+                      <h3 class="title">Технокряк</h3>
+                      <p class="text">Веб-сайт</p>
                     </li>
                     <li>
                         <img src="./images/posterNewOrlean.jpg" alt="design New Orlean vs Golden Star" width="370px">
-                        <h3>Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
+                        <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                        <p class="text">Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/restoranSeafood.jpg" alt="app restoran Seafood" width="370px">
-                        <h3>Ресторан Seafood</h3>
-                        <p>Додаток</p>
+                        <h3 class="title">Ресторан Seafood</h3>
+                        <p class="text">Додаток</p>
                     </li>
                     <li>
                         <img src="./images/projectPrime.jpg" alt=" marketing project Prime" width="370px">
-                        <h3>Проєкт Prime</h3>
-                        <p>Маркетинг</p>
+                        <h3 class="title">Проєкт Prime</h3>
+                        <p class="text">Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/projectBoxes.jpg" alt="project-app Boxes" width="370px">
-                        <h3>Проєкт Boxes</h3>
-                        <p>Додаток</p>
+                        <h3 class="title">Проєкт Boxes</h3>
+                        <p class="text">Додаток</p>
                     </li>
                     <li>
                         <img src="./images/inspiration.jpg" alt="website Inspiration has no Borders" width="370px">
-                        <h3>Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <h3 class="title">Inspiration has no Borders</h3>
+                        <p class="text">Веб-сайт</p>
                     </li>
                     <li>
                         <img src="./images/limitedEdition.jpg" alt="design Limited Edition" width="370px">
-                        <h3>Видання Limited Edition</h3>
-                        <p>Дизайн</p>
+                        <h3 class="title">Видання Limited Edition</h3>
+                        <p class="text">Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/projectLAB.jpg" alt="marketing project LAB" width="370px">
-                        <h3>Проєкт LAB</h3>
-                        <p>Маркетинг</p>
+                        <h3 class="title">Проєкт LAB</h3>
+                        <p class="text">Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/growingBusiness.jpg" alt="app Growing Business" width="370px">
-                        <h3>Growing Business</h3>
-                        <p>Додаток</p>
+                        <h3 class="title">Growing Business</h3>
+                        <p class="text">Додаток</p>
                     </li>
                     
                 </ul>
