finish style css

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <a class="logo" href="#">Web<span class="studio-footer">Studio</span></a>
 <address>
     <ul>
-        <li class="city"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
+        <li><a class="city" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
         <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
