--- a/portfolio.html
+++ b/portfolio.html
@@ -45,47 +45,47 @@
             <div>
                 <ul class="examples">
                     <li>
-                      <img src="./images/tehnokryak.jpg" alt="website tehnokryak" width="370px">
+                      <img src="./images/tehnokryak.jpg" alt="website tehnokryak" width="370">
                       <h3 class="title">Технокряк</h3>
                       <p class="text">Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/posterNewOrlean.jpg" alt="design New Orlean vs Golden Star" width="370px">
+                        <img src="./images/posterNewOrlean.jpg" alt="design New Orlean vs Golden Star" width="370">
                         <h3 class="title">Постер New Orlean vs Golden Star</h3>
                         <p class="text">Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/restoranSeafood.jpg" alt="app restoran Seafood" width="370px">
+                        <img src="./images/restoranSeafood.jpg" alt="app restoran Seafood" width="370">
                         <h3 class="title">Ресторан Seafood</h3>
                         <p class="text">Додаток</p>
                     </li>
                     <li>
-                        <img src="./images/projectPrime.jpg" alt=" marketing project Prime" width="370px">
+                        <img src="./images/projectPrime.jpg" alt=" marketing project Prime" width="370">
                         <h3 class="title">Проєкт Prime</h3>
                         <p class="text">Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/projectBoxes.jpg" alt="project-app Boxes" width="370px">
+                        <img src="./images/projectBoxes.jpg" alt="project-app Boxes" width="370">
                         <h3 class="title">Проєкт Boxes</h3>
                         <p class="text">Додаток</p>
                     </li>
                     <li>
-                        <img src="./images/inspiration.jpg" alt="website Inspiration has no Borders" width="370px">
+                        <img src="./images/inspiration.jpg" alt="website Inspiration has no Borders" width="370">
                         <h3 class="title">Inspiration has no Borders</h3>
                         <p class="text">Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/limitedEdition.jpg" alt="design Limited Edition" width="370px">
+                        <img src="./images/limitedEdition.jpg" alt="design Limited Edition" width="370">
                         <h3 class="title">Видання Limited Edition</h3>
                         <p class="text">Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/projectLAB.jpg" alt="marketing project LAB" width="370px">
+                        <img src="./images/projectLAB.jpg" alt="marketing project LAB" width="370">
                         <h3 class="title">Проєкт LAB</h3>
                         <p class="text">Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/growingBusiness.jpg" alt="app Growing Business" width="370px">
+                        <img src="./images/growingBusiness.jpg" alt="app Growing Business" width="370">
                         <h3 class="title">Growing Business</h3>
                         <p class="text">Додаток</p>
                     </li>
