--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 <body>
     <header>
         <nav >
-        <a class="logo" href="#">Web<span class="studio">Studio</span></a>
+        <a class="logo" href="index.html"><span class="web">Web</span>studio</a>
         
             <ul class="site-nav">
-                <li class="link current"><a href="index.html">Студія</a></li>
-                <li class="link"><a href="portfolio.html">Портфоліо</a></li>
-                <li class="link"><a href="#">Контакти</a></li>
+                <li><a class="menu-item" href="index.html">Студія</a></li>
+                <li><a class="menu-item" href="#">Контакти</a></li>
+                <li><a class="menu-item" href="portfolio.html">Портфоліо</a></li>
             </ul>
         </nav>
         <ul class="contacts">
-            <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li>
+                <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
         </ul>
 
     </header>
@@ -78,22 +82,22 @@
         <ul class="team">
             <li>
                 <img src="./images/igordemyanenko.jpg" alt="photo of igordemyanenko" width="270" height="260">
-                <h3>Ігор Дем'яненко</h3>
+                <h3 class="command">Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/olgarepina.jpg" alt="photo of olgarepina" width="270" height="260">
-                <h3>Ольга Рєпіна</h3>
+                <h3 class="command">Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/nikolaytarasov.jpg" alt="photo of nikolaytarasov" width="270" height="260">
-                <h3>Микола Тарасов</h3>
+                <h3 class="command">Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/mihailermakov.jpg" alt="photo of mihailermakov" width="270" height="260">
-                <h3>Михайло Єрмаков</h3>
+                <h3 class="command">Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
@@ -104,7 +108,7 @@
 <footer class="footer">
     <!-- Подвал -->
 <a class="logo" href="#">Web<span class="studio-footer">Studio</span></a>
-<address>
+<address class="address">
     <ul>
         <li><a class="city" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
         <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
